--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -1,15 +1,12 @@
 #$TRAYER=trayer --edge top --distance 20 --align center --tint 0x101520 --alpha 0 --iconspacing 5 --padding 10 --margin 18 --expand true --widthtype request
 $TRAYER=trayer --edge top --distance 16 --align right --tint 0x101520 --alpha 0 --iconspacing 5 --padding 5 --margin 18 --width 145 --widthtype pixel --height 30 --heighttype pixel
 
-$mainMod=SUPER
-
 #Mouse Binds
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
 # example binds
 bind=SUPERSHIFT,Return,exec,alacritty -e zsh
-bind=SUPER,Space,exec,rofi -show file-browser-extended -file-browser-depth 2
 bind=SUPER,T,exec,$TRAYER
 bind=SUPERALT,T,exec,pkill trayer
 bind=SUPERSHIFT,B,exec,firefox
@@ -35,12 +32,12 @@ bind=SUPERCONTROL,S,exec,grimblast --notify save area /home/synerr/Pictures/Scre
 bind=SUPERSHIFT,S,exec,grimblast --notify copy area
 bind=SUPERALT,S,exec,grimblast --notify copy window
 
-bindle=,XF86AudioRaiseVolume,exec,~/.config/dunst/scripts/volume up
-bindle=,XF86AudioLowerVolume,exec,~/.config/dunst/scripts/volume down
-bindle=,XF86AudioMute,exec,~/.config/dunst/scripts/volume mute
-bindle=,XF86MonBrightnessUp,exec,light -A 5
-bindle=,XF86MonBrightnessDown,exec,light -U 5
-bind=,XF86Calculator,exec,QT_QPA_PLATFORMTHEME=qt5ct kcalc
+#bindle=,XF86AudioRaiseVolume,exec,~/.config/dunst/scripts/volume up
+#bindle=,XF86AudioLowerVolume,exec,~/.config/dunst/scripts/volume down
+#bindle=,XF86AudioMute,exec,~/.config/dunst/scripts/volume mute
+#bindle=,XF86MonBrightnessUp,exec,light -A 5
+#bindle=,XF86MonBrightnessDown,exec,light -U 5
+#bind=,XF86Calculator,exec,QT_QPA_PLATFORMTHEME=qt5ct kcalc
 bindl=,XF86AudioMedia,exec,playerctl play-pause
 bindl=,XF86AudioPlay,exec,playerctl play-pause
 bindl=,XF86AudioStop,exec,playerctl stop
@@ -58,6 +55,16 @@ bindl=,XF86AudioNext,exec,playerctl next
 #bind=SUPER,9,workspace,9
 #bind=SUPER,0,workspace,10
 
+#bind=SUPER,1, split-workspace, 1
+#bind=SUPER,2, split-workspace, 2
+#bind=SUPER,3, split-workspace, 3
+#bind=SUPER,4, split-workspace, 4
+#bind=SUPER,5, split-workspace, 5
+#bind=SUPER,6, split-workspace, 6
+#bind=SUPER,7, split-workspace, 7
+#bind=SUPER,8, split-workspace, 8
+#bind=SUPER,9, split-workspace, 9
+#
 bind=SUPER,1,exec,~/.config/hypr/scripts/workspace 1
 bind=SUPER,2,exec,~/.config/hypr/scripts/workspace 2
 bind=SUPER,3,exec,~/.config/hypr/scripts/workspace 3
@@ -68,7 +75,7 @@ bind=SUPER,7,exec,~/.config/hypr/scripts/workspace 7
 bind=SUPER,8,exec,~/.config/hypr/scripts/workspace 8
 bind=SUPER,9,exec,~/.config/hypr/scripts/workspace 9
 bind=SUPER,0,exec,~/.config/hypr/scripts/workspace 10
-
+#
 bind=SUPER,w,exec,~/.config/hypr/scripts/workspace 
 
 bind=SUPERSHIFT,1,movetoworkspacesilent,1
@@ -129,12 +136,16 @@ bind=SUPERALT,F12,exec,hyprctl keyword misc:no_vfr 1
 
 
 #brighness
-bind=SUPER,f1,exec,brightnessctl set 10%- 
-bind=SUPER,f2,exec,brightnessctl set 10%+ 
+bind=SUPER,f1,exec, lightctl down
+bind=SUPER,f2,exec, lightctl up
 
 #volume
-bind=SUPER,f5,exec,pactl set-sink-volume @DEFAULT_SINK@ +10% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > 
-bind=SUPER,f6,exec,pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}'
-bind=SUPER,f4,exec,amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 
+bind=SUPER,f5,exec,volumectl -u down
+bind=SUPER,f6,exec,volumectl -u up 
+bind=SUPER,f4,exec,volumectl toggle-mute
+bind=SUPER,f7,exec,volumectl -m toggle-mute
+#bind=SUPER,f5,exec,pactl set-sink-volume @DEFAULT_SINK@ +10% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > 
+#bind=SUPER,f6,exec,pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}'
+#bind=SUPER,f4,exec,amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 
 
 
