--- a/.config/hypr/configs/exec.conf
+++ b/.config/hypr/configs/exec.conf
@@ -16,6 +16,7 @@ exec=pkill -9 flicker
 exec-once=openrgb --server
 exec-once=~/.config/hypr/scripts/xdph
 
-exec-once=$HOME/.local/share/hyprload/hyprload.sh
+#exec-once=$HOME/.local/share/hyprload/hyprload.sh
 
 exec=avizo-service
+exec-once=swww-daemon
