--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -7,18 +7,18 @@ bindm=SUPER,mouse:273,resizewindow
 
 # example binds
 bind=SUPERSHIFT,Return,exec,alacritty -e zsh
-bind=SUPER,T,exec,$TRAYER
-bind=SUPERALT,T,exec,pkill trayer
 bind=SUPERSHIFT,B,exec,firefox
 bind=SUPER,X,exec,color=$(hyprpicker) && wl-copy $color && convert -size 100x100 xc:$color /tmp/mycol.png && notify-send --expire-time=100000 -i /tmp/mycol.png "Hyprpicker" $color
 bind=SUPER,N,exec,connman-gtk
-bind=SUPERSHIFT,V,exec,pavucontrol-qt
+bind=SUPERSHIFT,V,exec,pavucontrol
 bind=SUPERSHIFT,E,exec,wlogout -p layer-shell
 bind=SUPERSHIFT,Q,exec,swaylock
 bind=SUPERSHIFT,F,exec,nautilus
 bind=SUPERCTRL,c,exec,dunstctl close-all
 bind=SUPER,Escape,exec,hyprctl reload
 bind=SUPER,Escape,exec,notify-send "Config Reloaded"
+bind=SUPER,Escape,exec,hyprload,reload
+bind=SUPER,Escape,exec,hyprload,update
 
 bind=SUPERSHIFT,space,togglefloating,
 bind=SUPER,A,exec,bash -c "if hyprctl activewindow | grep 'floating: 0'; then hyprctl dispatch togglefloating active; fi; hyprctl dispatch pin active"
@@ -32,65 +32,39 @@ bind=SUPERCONTROL,S,exec,grimblast --notify save area /home/synerr/Pictures/Scre
 bind=SUPERSHIFT,S,exec,grimblast --notify copy area
 bind=SUPERALT,S,exec,grimblast --notify copy window
 
-#bindle=,XF86AudioRaiseVolume,exec,~/.config/dunst/scripts/volume up
-#bindle=,XF86AudioLowerVolume,exec,~/.config/dunst/scripts/volume down
-#bindle=,XF86AudioMute,exec,~/.config/dunst/scripts/volume mute
-#bindle=,XF86MonBrightnessUp,exec,light -A 5
-#bindle=,XF86MonBrightnessDown,exec,light -U 5
-#bind=,XF86Calculator,exec,QT_QPA_PLATFORMTHEME=qt5ct kcalc
 bindl=,XF86AudioMedia,exec,playerctl play-pause
 bindl=,XF86AudioPlay,exec,playerctl play-pause
 bindl=,XF86AudioStop,exec,playerctl stop
 bindl=,XF86AudioPrev,exec,playerctl previous
 bindl=,XF86AudioNext,exec,playerctl next
 
-#bind=SUPER,1,workspace,1
-#bind=SUPER,2,workspace,2
-#bind=SUPER,3,workspace,3
-#bind=SUPER,4,workspace,4
-#bind=SUPER,5,workspace,5
-#bind=SUPER,6,workspace,6
-#bind=SUPER,7,workspace,7
-#bind=SUPER,8,workspace,8
-#bind=SUPER,9,workspace,9
-#bind=SUPER,0,workspace,10
+bind=SUPER,1,exec,hyprsome workspace 1
+bind=SUPER,2,exec,hyprsome workspace 2
+bind=SUPER,3,exec,hyprsome workspace 3
+bind=SUPER,4,exec,hyprsome workspace 4
+bind=SUPER,5,exec,hyprsome workspace 5
+bind=SUPER,6,exec,hyprsome workspace 11
+bind=SUPER,7,exec,hyprsome workspace 12
+bind=SUPER,8,exec,hyprsome workspace 13
+bind=SUPER,9,exec,hyprsome workspace 14
+bind=SUPER,0,exec,hyprsome workspace 15
 
-#bind=SUPER,1, split-workspace, 1
-#bind=SUPER,2, split-workspace, 2
-#bind=SUPER,3, split-workspace, 3
-#bind=SUPER,4, split-workspace, 4
-#bind=SUPER,5, split-workspace, 5
-#bind=SUPER,6, split-workspace, 6
-#bind=SUPER,7, split-workspace, 7
-#bind=SUPER,8, split-workspace, 8
-#bind=SUPER,9, split-workspace, 9
-#
-bind=SUPER,1,exec,~/.config/hypr/scripts/workspace 1
-bind=SUPER,2,exec,~/.config/hypr/scripts/workspace 2
-bind=SUPER,3,exec,~/.config/hypr/scripts/workspace 3
-bind=SUPER,4,exec,~/.config/hypr/scripts/workspace 4
-bind=SUPER,5,exec,~/.config/hypr/scripts/workspace 5
-bind=SUPER,6,exec,~/.config/hypr/scripts/workspace 6
-bind=SUPER,7,exec,~/.config/hypr/scripts/workspace 7
-bind=SUPER,8,exec,~/.config/hypr/scripts/workspace 8
-bind=SUPER,9,exec,~/.config/hypr/scripts/workspace 9
-bind=SUPER,0,exec,~/.config/hypr/scripts/workspace 10
-#
+bind=SUPERSHIFT,1,exec,hyprsome move 1
+bind=SUPERSHIFT,2,exec,hyprsome move 2
+bind=SUPERSHIFT,3,exec,hyprsome move 3
+bind=SUPERSHIFT,4,exec,hyprsome move 4
+bind=SUPERSHIFT,5,exec,hyprsome move 5
+bind=SUPERSHIFT,6,exec,hyprsome move 11
+bind=SUPERSHIFT,7,exec,hyprsome move 12
+bind=SUPERSHIFT,8,exec,hyprsome move 13
+bind=SUPERSHIFT,9,exec,hyprsome move 14
+bind=SUPERSHIFT,0,exec,hyprsome move 15
+
 bind=SUPER,w,exec,~/.config/hypr/scripts/workspace 
-
-bind=SUPERSHIFT,1,movetoworkspacesilent,1
-bind=SUPERSHIFT,2,movetoworkspacesilent,2
-bind=SUPERSHIFT,3,movetoworkspacesilent,3
-bind=SUPERSHIFT,4,movetoworkspacesilent,4
-bind=SUPERSHIFT,5,movetoworkspacesilent,5
-bind=SUPERSHIFT,6,movetoworkspacesilent,6
-bind=SUPERSHIFT,7,movetoworkspacesilent,7
-bind=SUPERSHIFT,8,movetoworkspacesilent,8
-bind=SUPERSHIFT,9,movetoworkspacesilent,9
-bind=SUPERSHIFT,0,movetoworkspacesilent,10
-
 bind=SUPER,grave,togglespecialworkspace,
 bind=SUPERSHIFT,grave,movetoworkspace,special
+
+bind=SUPERSHIFT,P,pin
 
 bind=SUPER,G,togglegroup,
 bind=SUPERSHIFT,space,changegroupactive,
@@ -144,8 +118,6 @@ bind=SUPER,f5,exec,volumectl -u down 10
 bind=SUPER,f6,exec,volumectl -u up 10
 bind=SUPER,f4,exec,volumectl toggle-mute
 bind=SUPER,f7,exec,volumectl -m toggle-mute
-#bind=SUPER,f5,exec,pactl set-sink-volume @DEFAULT_SINK@ +10% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > 
-#bind=SUPER,f6,exec,pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}'
-#bind=SUPER,f4,exec,amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 
-
+bindle=SUPER,f1,exec, lightctl down 10
+bindle=SUPER,f2,exec, lightctl up 10
 
