--- a/.config/hypr/themes/adventure/theme.conf
+++ b/.config/hypr/themes/adventure/theme.conf
@@ -12,10 +12,6 @@ general {
 decoration {
     rounding=13
     multisample_edges=1
-    blur=1
-    blur_size=5
-    blur_passes=2
-
     drop_shadow=1
     shadow_range=20
     shadow_render_power=2
@@ -29,8 +25,8 @@ blurls=notifications
 blurls=rofi
 
 
-bind=SUPER,B,exec,eww -c ~/.config/hypr/themes/adventure/eww/bar open --toggle bar
+bind=SUPER,B,exec,$THEME_DIR/scripts/toggle_bar
 bind=SUPER,D,exec,wofi --show drun
 
-exec="$THEME_DIR"/scripts/wallpaper "$THEME_DIR"/Wallpapers/cyber_wallpaper "$THEME_DIR"/Wallpapers/Clips
-exec=killall -3 eww & sleep 1 && "$THEME_DIR"/eww/launch_bar
+exec="$THEME_DIR"/scripts/swwwpaper "$THEME_DIR"/Wallpapers/cyber_wallpaper "$THEME_DIR"/Wallpapers/Clips
+exec=killall -3 eww & sleep 1 && "$THEME_DIR"/eww/toggle_bar
