--- a/.config/hypr/configs/monitors.conf
+++ b/.config/hypr/configs/monitors.conf
@@ -1,5 +1,3 @@
-#Monitor Configuration
-#monitor=,preferred,auto,1
 monitor=,highres,auto,1
 #monitor=desc:BOE 0x0900,preferred,0x0,1
 #monitor=desc:LG Electronics LG ULTRAWIDE 0x0000FE20, preferred, 1920x0,1
@@ -13,4 +11,22 @@ monitor=,addreserved,0,0,40,0
 #workspace=desc:EMA E202HV Q400C0024031,7
 #
 #monitor=DP-1,3840x0,0x0,1
+#
+workspace=1,monitor:DP-1
+workspace=2,monitor:DP-1
+workspace=3,monitor:DP-1
+workspace=4,monitor:DP-1
+workspace=5,monitor:DP-1
 
+workspace=11,monitor:HDMI-A-1
+workspace=12,monitor:HDMI-A-1
+workspace=13,monitor:HDMI-A-1
+workspace=14,monitor:HDMI-A-1
+workspace=15,monitor:HDMI-A-1
+
+
+#workspace=11,monitor:HDMI-A-1
+#workspace=12,monitor:HDMI-A-1
+#workspace=13,monitor:HDMI-A-1
+#workspace=14,monitor:HDMI-A-1
+#workspace=15,monitor:HDMI-A-1
