--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,8 +3,8 @@
 #
 # Refer to the wiki for more information.
 
+#exec-once=$HOME/.local/share/hyprload/hyprload.sh
 source=~/.config/hypr/configs/exec.conf
-
 general {
     #sensitivity=1.00
     #apply_sens_to_raw=0.6
@@ -97,8 +97,8 @@ misc {
 
 
 #Sourcing external config files
-source=~/.config/hypr/configs/keybinds.conf
 source=~/.config/hypr/configs/monitors.conf
+source=~/.config/hypr/configs/keybinds.conf
 source=~/.config/hypr/configs/window_rules.conf
 source=~/.config/hypr/configs/env.conf
 
