--- a/.config/hypr/hyprload.toml
+++ b/.config/hypr/hyprload.toml
@@ -1,3 +1,3 @@
 plugins = [
-    "Duckonaut/split-monitor-workspaces",
+    { local = "/home/synerr/.local/share/hyprload/plugins/split-monitor-workspaces" },
 ]
