up-to date config files

--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -38,28 +38,50 @@ bindl=,XF86AudioStop,exec,playerctl stop
 bindl=,XF86AudioPrev,exec,playerctl previous
 bindl=,XF86AudioNext,exec,playerctl next
 
-bind=SUPER,1,exec,hyprsome workspace 1
-bind=SUPER,2,exec,hyprsome workspace 2
-bind=SUPER,3,exec,hyprsome workspace 3
-bind=SUPER,4,exec,hyprsome workspace 4
-bind=SUPER,5,exec,hyprsome workspace 5
-bind=SUPER,6,exec,hyprsome workspace 11
-bind=SUPER,7,exec,hyprsome workspace 12
-bind=SUPER,8,exec,hyprsome workspace 13
-bind=SUPER,9,exec,hyprsome workspace 14
-bind=SUPER,0,exec,hyprsome workspace 15
+bind=SUPER,1,workspace,1
+bind=SUPER,2,workspace,2
+bind=SUPER,3,workspace,3
+bind=SUPER,4,workspace,4
+bind=SUPER,5,workspace,5
+bind=SUPER,6,workspace,6
+bind=SUPER,7,workspace,7
+bind=SUPER,8,workspace,8
+bind=SUPER,9,workspace,9
+bind=SUPER,0,workspace,0
 
-bind=SUPERSHIFT,1,exec,hyprsome move 1
-bind=SUPERSHIFT,2,exec,hyprsome move 2
-bind=SUPERSHIFT,3,exec,hyprsome move 3
-bind=SUPERSHIFT,4,exec,hyprsome move 4
-bind=SUPERSHIFT,5,exec,hyprsome move 5
-bind=SUPERSHIFT,6,exec,hyprsome move 11
-bind=SUPERSHIFT,7,exec,hyprsome move 12
-bind=SUPERSHIFT,8,exec,hyprsome move 13
-bind=SUPERSHIFT,9,exec,hyprsome move 14
-bind=SUPERSHIFT,0,exec,hyprsome move 15
+bind=SUPERSHIFT,1,movetoworkspacesilent,1
+bind=SUPERSHIFT,2,movetoworkspacesilent,2
+bind=SUPERSHIFT,3,movetoworkspacesilent,3
+bind=SUPERSHIFT,4,movetoworkspacesilent,4
+bind=SUPERSHIFT,5,movetoworkspacesilent,5
+bind=SUPERSHIFT,6,movetoworkspacesilent,6
+bind=SUPERSHIFT,7,movetoworkspacesilent,7
+bind=SUPERSHIFT,8,movetoworkspacesilent,8
+bind=SUPERSHIFT,9,movetoworkspacesilent,9
+bind=SUPERSHIFT,0,movetoworkspacesilent,0
 
+#bind=SUPER,1,exec,hyprsome workspace 1
+#bind=SUPER,2,exec,hyprsome workspace 2
+#bind=SUPER,3,exec,hyprsome workspace 3
+#bind=SUPER,4,exec,hyprsome workspace 4
+#bind=SUPER,5,exec,hyprsome workspace 5
+#bind=SUPER,6,exec,hyprsome workspace 11
+#bind=SUPER,7,exec,hyprsome workspace 12
+#bind=SUPER,8,exec,hyprsome workspace 13
+#bind=SUPER,9,exec,hyprsome workspace 14
+#bind=SUPER,0,exec,hyprsome workspace 15
+#
+#bind=SUPERSHIFT,1,exec,hyprsome move 1
+#bind=SUPERSHIFT,2,exec,hyprsome move 2
+#bind=SUPERSHIFT,3,exec,hyprsome move 3
+#bind=SUPERSHIFT,4,exec,hyprsome move 4
+#bind=SUPERSHIFT,5,exec,hyprsome move 5
+#bind=SUPERSHIFT,6,exec,hyprsome move 11
+#bind=SUPERSHIFT,7,exec,hyprsome move 12
+#bind=SUPERSHIFT,8,exec,hyprsome move 13
+#bind=SUPERSHIFT,9,exec,hyprsome move 14
+#bind=SUPERSHIFT,0,exec,hyprsome move 15
+#
 bind=SUPER,w,exec,~/.config/hypr/scripts/workspace 
 bind=SUPER,grave,togglespecialworkspace,
 bind=SUPERSHIFT,grave,movetoworkspace,special
