--- a/.config/hypr/themes/adventure/theme.conf
+++ b/.config/hypr/themes/adventure/theme.conf
@@ -29,4 +29,5 @@ bind=SUPER,B,exec,$THEME_DIR/scripts/toggle_bar
 bind=SUPER,D,exec,wofi --show drun
 
 exec="$THEME_DIR"/scripts/swwwpaper "$THEME_DIR"/Wallpapers/cyber_wallpaper "$THEME_DIR"/Wallpapers/Clips
-exec=killall -3 eww & sleep 1 && "$THEME_DIR"/eww/toggle_bar
+#exec=swaybg -i $HOME/Pictures/Wallpaper/ryabina.jpg
+exec=killall -3 eww & sleep 1 && "$THEME_DIR"/scripts/toggle_bar
