--- a/.config/hypr/configs/exec.conf
+++ b/.config/hypr/configs/exec.conf
@@ -17,6 +17,11 @@ exec-once=openrgb --server
 exec-once=~/.config/hypr/scripts/xdph
 
 #exec-once=$HOME/.local/share/hyprload/hyprload.sh
-
 exec=avizo-service
 exec-once=swww-daemon
+
+# load plugins
+exec-once=hyprctl plugin load /home/ebalka/.local/share/hyprland-plugins/split-monitor-workspaces.so
+
+exec-once=/home/fishe/bin/hypr
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
