--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -26,11 +26,11 @@ bind=SUPER,Q,killactive,
 bind=SUPERCONTROL,Q,exec,hyprctl kill
 bind=SUPER,F,fullscreen,
 
-bind=,Print,exec,grimblast --notify save output /home/synerr/Pictures/Screenshots/$(date +'%Y%m%d%H%M%S_1.png')
+#bind=,Print,exec,grimblast --notify save output /home/ebalka/Pictures/Screenshots/$(date +'%Y%m%d%H%M%S_1.png')
 bind=SUPER,Print,exec,grimblast --notify copy output
-bind=SUPERCONTROL,S,exec,grimblast --notify save area /home/synerr/Pictures/Screenshots/$(date +'%Y%m%d%H%M%S_1.png')
+bind=SUPERCONTROL,S,exec,grimblast --notify save area /home/ebalka/Pictures/Screenshots/$(date +'%Y%m%d%H%M%S_1.png')
 bind=SUPERSHIFT,S,exec,grimblast --notify copy area
-bind=SUPERALT,S,exec,grimblast --notify copy window
+bind=,Print,exec,grimblast --notify copy screen 
 
 bindl=,XF86AudioMedia,exec,playerctl play-pause
 bindl=,XF86AudioPlay,exec,playerctl play-pause
@@ -38,27 +38,27 @@ bindl=,XF86AudioStop,exec,playerctl stop
 bindl=,XF86AudioPrev,exec,playerctl previous
 bindl=,XF86AudioNext,exec,playerctl next
 
-bind=SUPER,1,exec,hyprsome workspace 1
-bind=SUPER,2,exec,hyprsome workspace 2
-bind=SUPER,3,exec,hyprsome workspace 3
-bind=SUPER,4,exec,hyprsome workspace 4
-bind=SUPER,5,exec,hyprsome workspace 5
-bind=SUPER,6,exec,hyprsome workspace 11
-bind=SUPER,7,exec,hyprsome workspace 12
-bind=SUPER,8,exec,hyprsome workspace 13
-bind=SUPER,9,exec,hyprsome workspace 14
-bind=SUPER,0,exec,hyprsome workspace 15
+bind=SUPER,1,split-workspace,1
+bind=SUPER,2,split-workspace,2
+bind=SUPER,3,split-workspace,3
+bind=SUPER,4,split-workspace,4
+bind=SUPER,5,split-workspace,5
+bind=SUPER,6,split-workspace,11
+bind=SUPER,7,split-workspace,12
+bind=SUPER,8,split-workspace,13
+bind=SUPER,9,split-workspace,14
+bind=SUPER,0,split-workspace,15
 
-bind=SUPERSHIFT,1,exec,hyprsome move 1
-bind=SUPERSHIFT,2,exec,hyprsome move 2
-bind=SUPERSHIFT,3,exec,hyprsome move 3
-bind=SUPERSHIFT,4,exec,hyprsome move 4
-bind=SUPERSHIFT,5,exec,hyprsome move 5
-bind=SUPERSHIFT,6,exec,hyprsome move 11
-bind=SUPERSHIFT,7,exec,hyprsome move 12
-bind=SUPERSHIFT,8,exec,hyprsome move 13
-bind=SUPERSHIFT,9,exec,hyprsome move 14
-bind=SUPERSHIFT,0,exec,hyprsome move 15
+bind=SUPERSHIFT,1,split-movetoworkspacesilent,1
+bind=SUPERSHIFT,2,split-movetoworkspacesilent,2
+bind=SUPERSHIFT,3,split-movetoworkspacesilent,3
+bind=SUPERSHIFT,4,split-movetoworkspacesilent,4
+bind=SUPERSHIFT,5,split-movetoworkspacesilent,5
+bind=SUPERSHIFT,6,split-movetoworkspacesilent,11
+bind=SUPERSHIFT,7,split-movetoworkspacesilent,12
+bind=SUPERSHIFT,8,split-movetoworkspacesilent,13
+bind=SUPERSHIFT,9,split-movetoworkspacesilent,14
+bind=SUPERSHIFT,0,split-movetoworkspacesilent,15
 
 bind=SUPER,w,exec,~/.config/hypr/scripts/workspace 
 bind=SUPER,grave,togglespecialworkspace,
@@ -118,6 +118,4 @@ bind=SUPER,f5,exec,volumectl -u down 10
 bind=SUPER,f6,exec,volumectl -u up 10
 bind=SUPER,f4,exec,volumectl toggle-mute
 bind=SUPER,f7,exec,volumectl -m toggle-mute
-bindle=SUPER,f1,exec, lightctl down 10
-bindle=SUPER,f2,exec, lightctl up 10
 
