--- a/.config/hypr/configs/window_rules.conf
+++ b/.config/hypr/configs/window_rules.conf
@@ -2,16 +2,13 @@
 # for windows named/classed as abc and xyz
 windowrulev2=float,class:Plexamp
 windowrule=float,title:^(Welcome to Audacity\!)$
-windowrule=float,Rofi
-windowrule=float,inkstitch
+windowrule=float,wofi
 windowrule=float,title:"Break Apart Fill Objects"
-windowrule=float,pavucontrol-qt
+windowrule=float,pavucontrol
 windowrule=noblur,ffxiv*
 windowrule=noblur,gamescope
 windowrule=fullscreen,gamescope
 windowrule=workspace 6 silent,^(gamescope)$
-
-windowrule=float, connman-gtk
 
 windowrule = fullscreen, wlogout
 windowrule = float, title:wlogout
@@ -20,19 +17,12 @@ windowrule = fullscreen, title:wlogout
 windowrulev2=float,class:,title:^(Picture in picture)$
 windowrulev2=pin,class:,title:^(Picture in picture)$
 
-windowrule=workspace 5 silent,title:^(Spotify)$
-windowrule=tile,title:^(Spotify)$
-
-#Rhythm Doctor
-windowrule=windowdance,title:^(Rhythm Doctor)$
-windowrule=forceinput,title:^(Rhythm Doctor)$
-
-#
-windowrule=float, com-group_finity-mascot-Main
-windowrule=noblur, com-group_finity-mascot-Main
-windowrule=nofocus, com-group_finity-mascot-Main
-windowrule=noshadow, com-group_finity-mascot-Main
-windowrule=noborder, com-group_finity-mascot-Main
-
+# #
+# windowrule=float, com-group_finity-mascot-Main
+# windowrule=noblur, com-group_finity-mascot-Main
+# windowrule=nofocus, com-group_finity-mascot-Main
+# windowrule=noshadow, com-group_finity-mascot-Main
+# windowrule=noborder, com-group_finity-mascot-Main
+# 
 windowrulev2=windowdance,class:^(REAPER)$,title:^(menu)$
 windowrulev2=forceinput,class:^(REAPER)$,title:^(menu)$
