--- a/.config/hypr/themes/adventure/theme.conf
+++ b/.config/hypr/themes/adventure/theme.conf
@@ -25,8 +25,8 @@ blurls=notifications
 blurls=rofi
 
 
-bind=SUPER,B,exec,$THEME_DIR/scripts/toggle_bar
+bind=SUPER,B,exec,/home/ebalka/.config/hypr/themes/adventure/scripts/toggle_bar
 bind=SUPER,D,exec,wofi --show drun
 
-exec="$THEME_DIR"/scripts/swwwpaper "$THEME_DIR"/Wallpapers/cyber_wallpaper "$THEME_DIR"/Wallpapers/Clips
-exec=killall -3 eww & sleep 1 && "$THEME_DIR"/eww/toggle_bar
+exec=/home/ebalka/.config/hypr/themes/adventure/scripts/swwwpaper /home/ebalka/.config/hypr/themes/adventure/Wallpapers/cyber_wallpaper /home/ebalka/.config/hypr/themes/adventure/Wallpapers/Clips
+exec=killall -3 eww & sleep 1 && "$THEME_DIR"/scripts/toggle_bar
