--- a/.config/hypr/themes/cyber/theme.conf
+++ b/.config/hypr/themes/cyber/theme.conf
@@ -1,4 +1,4 @@
-$THEME_DIR=/home/synerr/.config/hypr/themes/cyber
+$THEME_DIR=/home/ebalka/.config/hypr/themes/cyber
 
 general {
     border_size=4
@@ -7,6 +7,8 @@ general {
     gaps_in=8
     gaps_out=16
 }
+
+monitor=,addreserved,30,30,30,30
 
 decoration {
     rounding=12
