--- a/.config/hypr/themes/garden/theme.conf
+++ b/.config/hypr/themes/garden/theme.conf
@@ -12,16 +12,6 @@ general {
 decoration {
     rounding=13
     multisample_edges=1
-    blur=1
-    blur_size=5
-    blur_passes=2
-
-    drop_shadow=1
-    shadow_range=20
-    shadow_render_power=2
-    shadow_ignore_window=1
-    shadow_offset= 8 8
-    col.shadow=0x44000000
 }
 
 blurls=gtk-layer-shell
@@ -29,9 +19,9 @@ blurls=notifications
 blurls=rofi
 
 
-bind=SUPER,B,exec,eww -c ~/.config/hypr/themes/fun9ral/eww/bar open --toggle bar
+bind=SUPER,B,exec,eww -c $THEME_DIR/scripts/launch_bar
 bind=SUPER,D,exec,wofi --show drun
 
 #exec="$THEME_DIR"/scripts/wallpaper "$THEME_DIR"/Wallpapers/ "$THEME_DIR"/Wallpapers/Clips
-exec="$THEME_DIR"/scripts/swwwpaper "$THEME_DIR"/Wallpaper/
-exec=killall -3 eww & sleep 1 && "$THEME_DIR"/eww/launch_bar
+exec-once=$THEME_DIR/scripts/swwwpaper $THEME_DIR/Wallpaper/ $THEME_DIR/Wallpaper/
+exec-once=killall -3 eww & sleep 1 && "$THEME_DIR"/eww/launch_bar
