--- a/.config/hypr/configs/monitors.conf
+++ b/.config/hypr/configs/monitors.conf
@@ -1,32 +1,3 @@
-monitor=,highres,auto,1
-#monitor=desc:BOE 0x0900,preferred,0x0,1
-#monitor=desc:LG Electronics LG ULTRAWIDE 0x0000FE20, preferred, 1920x0,1
-#monitor=desc:EMA E202HV Q400C0024031,1600x900,4480x180,1
-#monitor=desc:Sony SONY TV  *30 0x00000101,3840x2160@60,0x0,2
-monitor=,addreserved,0,0,40,0
-#monitor=eDP-1,1920x1080@60,0,1
-#
-#workspace=desc:BOE 0x0900,1
-#workspace=desc:LG Electronics LG ULTRAWIDE 0x0000FE20,2
-#workspace=desc:EMA E202HV Q400C0024031,7
-#
-#monitor=DP-1,3840x0,0x0,1
-#
-workspace=1,monitor:DP-1
-workspace=2,monitor:DP-1
-workspace=3,monitor:DP-1
-workspace=4,monitor:DP-1
-workspace=5,monitor:DP-1
-
-workspace=11,monitor:HDMI-A-1
-workspace=12,monitor:HDMI-A-1
-workspace=13,monitor:HDMI-A-1
-workspace=14,monitor:HDMI-A-1
-workspace=15,monitor:HDMI-A-1
-
-
-#workspace=11,monitor:HDMI-A-1
-#workspace=12,monitor:HDMI-A-1
-#workspace=13,monitor:HDMI-A-1
-#workspace=14,monitor:HDMI-A-1
-#workspace=15,monitor:HDMI-A-1
+monitor=eDP-1,highres,0x0,1
+monitor=DP-3,1920x1080,1920x0,1,transform,2
+monitor=eDP-1,addreserved,0,0,30,0
