--- a/.config/hypr/hyprload.toml
+++ b/.config/hypr/hyprload.toml
@@ -1,3 +1,3 @@
 plugins = [
-    { local = "/home/synerr/.local/share/hyprload/plugins/split-monitor-workspaces" },
+    { local = "/home/ebalka/.local/share/hyprload/plugins/split-monitor-workspaces" },
 ]
