--- a/.config/hypr/themes/garden/hyprpaper.conf
+++ b/.config/hypr/themes/garden/hyprpaper.conf
@@ -1,10 +1,10 @@
-preload = ~/Pictures/Neon Wallpaper/Neon_Circle.jpg
-preload = ~/Pictures/Neon Wallpaper/Neon_Leaves.jpg
-
-wallpaper = eDP-2,~/Pictures/Neon Wallpaper/Neon_Leaves.jpg
-wallpaper = eDP-1,~/Pictures/Neon Wallpaper/Neon_Leaves.jpg
-wallpaper = DP-1,~/Pictures/Neon Wallpaper/Neon_Leaves.jpg
-
+# preload = ~/Pictures/Neon Wallpaper/Neon_Circle.jpg
+# preload = ~/Pictures/Neon Wallpaper/Neon_Leaves.jpg
+# 
+# wallpaper = eDP-2,~/Pictures/Neon Wallpaper/Neon_Leaves.jpg
+# wallpaper = eDP-1,~/Pictures/Neon Wallpaper/Neon_Leaves.jpg
+# wallpaper = DP-1,~/Pictures/Neon Wallpaper/Neon_Leaves.jpg
+# 
 #preload = ~/Pictures/GoW/GOW1.png
 #preload = ~/Pictures/GoW/GOW2.png
 #preload = ~/Pictures/GoW/GOW3.png
