--- a/.config/hypr/configs/window_rules.conf
+++ b/.config/hypr/configs/window_rules.conf
@@ -6,6 +6,7 @@ windowrule=float,Rofi
 windowrule=float,inkstitch
 windowrule=float,title:"Break Apart Fill Objects"
 windowrule=float,pavucontrol-qt
+windowrule=float,blueman-manager
 windowrule=noblur,ffxiv*
 windowrule=noblur,gamescope
 windowrule=fullscreen,gamescope
@@ -36,3 +37,4 @@ windowrule=noborder, com-group_finity-mascot-Main
 
 windowrulev2=windowdance,class:^(REAPER)$,title:^(menu)$
 windowrulev2=forceinput,class:^(REAPER)$,title:^(menu)$
+
