--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 import = [
-  "~/.config/alacritty/themes/themes/dracula.toml"
+  "~/.config/alacritty/themes/themes/horiszon-dark.toml"
 ]
 
 [keyboard]
@@ -20,22 +20,24 @@ history=20000
 
 [window]
 dynamic_padding=true
-opacity=0.9
+opacity=1
 padding = {x = 10, y = 5}
 decorations = "Full"
 blur = true
 decorations_theme_variant = "Dark"
 
 [font]
-size=13
+size=11
 offset = {x = 0, y = 0}
 
 [font.normal]
-family = "Fura Code Nerd Font"
+#family = "Fura Code Nerd Font"
+family = "SpaceMono Nerd Font"
 style = "Regular"
 
 [font.bold]
-family = "Fura Code Nerd Font"
+#family = "Fura Code Nerd Font"
+family = "SpaceMono Nerd Font"
 style = "Bold"
 
 [font.italic]
