--- a/.config/hypr/configs/exec.conf
+++ b/.config/hypr/configs/exec.conf
@@ -9,8 +9,9 @@ exec-once=sleep 5 && blueman-applet
 exec=pkill -9 flicker
 exec-once=openrgb --server
 exec-once=~/.config/hypr/scripts/xdph
+# exec-once=/home/ebalka/.local/share/hyprload/hyprload.sh
 
-exec-once=$HOME/.local/share/hyprload/hyprload.sh
+
 exec=avizo-service
 #exec-once=swww-daemon
 exec-once = swww init; swww kill; swww init # idk why tbh
@@ -23,3 +24,4 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = wl-paste --watch cliphist store &
+
