--- a/.config/hypr/configs/exec.conf
+++ b/.config/hypr/configs/exec.conf
@@ -1,5 +1,4 @@
 #Commands to be executed at launch
-
 exec-once = ags &
 exec-once=wl-clipboard-history -t
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -8,8 +7,12 @@ exec-once=wlsunset -S 9:00 -s 19:00 -t 4000 -T 5000
 exec-once=sleep 5 && blueman-applet
 exec=pkill -9 flicker
 exec-once=openrgb --server
-exec-once=~/.config/hypr/scripts/xdph
+# exec-once=~/.config/hypr/scripts/xdph
 # exec-once=/home/ebalka/.local/share/hyprload/hyprload.sh
+
+# XDG-DESKTOP-PORTAL NIGGER
+exec-once=~/.config/hypr/scripts/xdph
+
 
 
 exec=avizo-service
