--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -7,7 +7,7 @@ bindm=Super,mouse:273,resizewindow
 #
 ###### Normal apps
 #Terminal
-bind = SuperShift, Return, exec, alacritty -e fish
+bind = SuperShift, Return, exec, foot -e fish
 bind = Super, T, exec, foot --override shell=zsh
 
 # Browser
