migrated towards using hyprlock and hypridle

--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -1,25 +1,25 @@
 # Auto generated color theme for image at: [Local wallpaper]
 general {
-    col.active_border = rgba(003549FF)
-    col.inactive_border = rgba(364954CC)
+    col.active_border = rgba(5c113bFF)
+    col.inactive_border = rgba(59404aCC)
 }
 
 plugin {
     droidbars {
         # example config
         bar_height = 30
-        background_color = rgba(0F1012FF)
-        # background_color_active = rgba(41484dFF) # Not added yet
-        text_color = rgba(d1e6f3FF)
+        background_color = rgba(130F10FF)
+        # background_color_active = rgba(514348FF) # Not added yet
+        text_color = rgba(fed9e6FF)
         font_family = Lexend
         button_font_fmily = JetBrainsMono NF
 
         # example buttons (R -> L)
         # droidbars-button = [0]isLeft(0/1), [1]color, [2]color2, [3]width, [4]height, [5]icon, [6]buttonType, [7]on-click     
-        droidbars-button = 0, rgba(d1e6f3FF), rgba(70d2ffFF), 42, 16,‎    󰖭, normal, hyprctl dispatch killactive
-        droidbars-button = 0, rgba(d1e6f3FF), rgba(70d2ffFF), 42, 16,‎   , normal, hyprctl dispatch fullscreen 1
-        droidbars-button = 1, rgba(d1e6f3FF), rgba(70d2ffFF), 16, 16,‎󰐃, pin, hyprctl dispatch pin
-        droidbars-button = 1, rgba(d1e6f3FF), rgba(70d2ffFF), 16, 16,󰗘, float, hyprctl dispatch togglefloating
+        droidbars-button = 0, rgba(fed9e6FF), rgba(ffafd2FF), 42, 16,‎    󰖭, normal, hyprctl dispatch killactive
+        droidbars-button = 0, rgba(fed9e6FF), rgba(ffafd2FF), 42, 16,‎   , normal, hyprctl dispatch fullscreen 1
+        droidbars-button = 1, rgba(fed9e6FF), rgba(ffafd2FF), 16, 16,‎󰐃, pin, hyprctl dispatch pin
+        droidbars-button = 1, rgba(fed9e6FF), rgba(ffafd2FF), 16, 16,󰗘, float, hyprctl dispatch togglefloating
     }
     hyprbars {
         # Honestly idk if it works like css, but well, why not
@@ -30,14 +30,14 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgb(0F1012)
-        col.text = rgb(e1e3e5)
+        bar_color = rgb(130F10)
+        col.text = rgb(ebe0e2)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e1e3e5), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e1e3e5), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e1e3e5), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(ebe0e2), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(ebe0e2), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(ebe0e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
