--- a/.config/hypr/configs/keybinds.conf
+++ b/.config/hypr/configs/keybinds.conf
@@ -8,7 +8,7 @@ bindm=Super,mouse:273,resizewindow
 ###### Normal apps
 #Terminal
 bind = SuperShift, Return, exec, foot -e fish
-bind = Super, T, exec, foot --override shell=zsh
+bind = Super, T, exec, foot
 
 # Browser
 bind = Super, W, exec, firefox
@@ -17,9 +17,6 @@ bind = Super, W, exec, firefox
 bind = Super, E, exec, nautilus --new-window
 # Color picker
 bind=Super, X, exec, color=$(hyprpicker) && wl-copy $color && convert -size 100x100 xc:$color /tmp/mycol.png && notify-send --expire-time=100000 -i /tmp/mycol.png "Hyprpicker" $color
-
-# Tert editor for notes
-bind = Super, P, exec, gnome-text-editor --new-window
 
 # VS code
 bind = Super, C, exec, code --password-store=gnome --enable-features=UseOzonePlatform --ozone-platform=wayland
@@ -40,7 +37,7 @@ bind = SuperShift, S, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000
 
 #################################  Controls and stuff  ########################
 # Locksreen
-bind = SuperShift, q, exec, swaylock
+bind = SuperShift, q, exec, hyprlock
 
 # Volume control
 bind = SuperShift, V, exec, pavucontrol 
@@ -146,11 +143,10 @@ bindr = ControlSuper, R, exec, killall ags activewin.sh activews.sh gohypr bash 
 
 # Change wallpaper
 bind = ControlSuper, T, exec, ~/.config/ags/scripts/color_generation/switchwall.sh
-bindir = Super, Super_L, exec, ags -t 'overview'
-bind = Super, Tab, exec, ags -t 'overview'
+bind = Super, D, exec, ags -t 'overview'
 bind = Super, Slash, exec, ags -t 'cheatsheet'
 bind = Super, A, exec, ags -t 'sideleft'
-bind = Super, D, exec, ags -t 'sideright'
+bind = Super, S, exec, ags -t 'sideright'
 
 ##################### Actions ############################
 
