--- a/.config/hypr/configs/exec.conf
+++ b/.config/hypr/configs/exec.conf
@@ -4,7 +4,7 @@ exec-once=wl-clipboard-history -t
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec-once=dunst
 exec-once=wlsunset -S 9:00 -s 19:00 -t 4000 -T 5000 
-exec-once=sleep 5 && blueman-applet
+# exec-once=sleep 5 && blueman-applet
 exec=pkill -9 flicker
 exec-once=openrgb --server
 # exec-once=~/.config/hypr/scripts/xdph
@@ -20,10 +20,10 @@ exec=avizo-service
 exec-once = swww init; swww kill; swww init # idk why tbh
 
 # load plugins
-exec-once=hyprctl plugin load /home/ebalka/.local/share/hyprland-plugins/split-monitor-workspaces.so
+# exec-once=hyprctl plugin load /home/ebalka/.local/share/hyprland-plugins/split-monitor-workspaces.so
 
 exec-once=/home/fishe/bin/hypr
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP GDK_BACKEND
 
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = wl-paste --watch cliphist store &
