--- a/.config/hypr/configs/monitors.conf
+++ b/.config/hypr/configs/monitors.conf
@@ -1,3 +1,8 @@
 monitor=eDP-1,highres,0x0,1
 #monitor=DP-3,1920x1080,1920x0,1,transform,2
 monitor=,addreserved,0,0,40,0
+windowrule = nofullscreenrequest,flameshot
+windowrule = float,flameshot
+windowrule = monitor 1,flameshot
+windowrule = move 0 0,flameshot
+windowrule = noanim,flameshot
