--- a/.config/foot/foot_new.ini
+++ b/.config/foot/foot_new.ini
@@ -56,7 +56,7 @@ lines=10000
 [cursor]
 style=block
 # color=111111 dcdccc
-color=0F1012 e1e3e5
+color=130F10 ebe0e2
 # blink=no
 beam-thickness=1.5
 # underline-thickness=<font underline thickness>
@@ -67,24 +67,24 @@ beam-thickness=1.5
 
 [colors]
 alpha=1
-background=0F1012
-foreground=e1e3e5
-regular0=0F1012
+background=130F10
+foreground=ebe0e2
+regular0=130F10
 regular1=ffb4a9
-regular2=006688
-regular3=bee8ff
-regular4=bee8ff
-regular5=d1e6f3
-regular6=70d2ff
-regular7=c0c7cd
-bright0=0F1012
+regular2=96416b
+regular3=ffd9e8
+regular4=ffd9e8
+regular5=fed9e6
+regular6=ffafd2
+regular7=d4c2c7
+bright0=130F10
 bright1=ffb4a9
-bright2=006688
-bright3=bee8ff
-bright4=bee8ff
-bright5=d1e6f3
-bright6=70d2ff
-bright7=c0c7cd
+bright2=96416b
+bright3=ffd9e8
+bright4=ffd9e8
+bright5=fed9e6
+bright6=ffafd2
+bright7=d4c2c7
 
 [csd]
 # preferred=server
@@ -111,7 +111,7 @@ search-start=Control+f
 # font-increase=Control+plus Control+equal Control+KP_Add
 # font-decrease=Control+minus Control+KP_Subtract
 # font-reset=Control+0 Control+KP_0
-# spawn-terminal=Control+Shift+n
+spawn-terminal=Mod4+Insert
 # minimize=none
 # maximize=none
 # fullscreen=none
