--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -56,7 +56,7 @@ lines=10000
 [cursor]
 style=block
 # color=111111 dcdccc
-color=130F10 ebe0e2
+color=130F0F ede0de
 # blink=no
 beam-thickness=1.5
 # underline-thickness=<font underline thickness>
@@ -67,24 +67,24 @@ beam-thickness=1.5
 
 [colors]
 alpha=1
-background=130F10
-foreground=ebe0e2
-regular0=130F10
+background=130F0F
+foreground=ede0de
+regular0=130F0F
 regular1=ffb4a9
-regular2=96416b
-regular3=ffd9e8
-regular4=ffd9e8
-regular5=fed9e6
-regular6=ffafd2
-regular7=d4c2c7
-bright0=130F10
+regular2=b12c25
+regular3=ffdad4
+regular4=ffdad4
+regular5=ffdad5
+regular6=ffb4a9
+regular7=d8c1be
+bright0=130F0F
 bright1=ffb4a9
-bright2=96416b
-bright3=ffd9e8
-bright4=ffd9e8
-bright5=fed9e6
-bright6=ffafd2
-bright7=d4c2c7
+bright2=b12c25
+bright3=ffdad4
+bright4=ffdad4
+bright5=ffdad5
+bright6=ffb4a9
+bright7=d8c1be
 
 [csd]
 # preferred=server
