--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -1,25 +1,25 @@
 # Auto generated color theme for image at: [Local wallpaper]
 general {
-    col.active_border = rgba(5c113bFF)
-    col.inactive_border = rgba(59404aCC)
+    col.active_border = rgba(680002FF)
+    col.inactive_border = rgba(5d3f3bCC)
 }
 
 plugin {
     droidbars {
         # example config
         bar_height = 30
-        background_color = rgba(130F10FF)
-        # background_color_active = rgba(514348FF) # Not added yet
-        text_color = rgba(fed9e6FF)
+        background_color = rgba(130F0FFF)
+        # background_color_active = rgba(534341FF) # Not added yet
+        text_color = rgba(ffdad5FF)
         font_family = Lexend
         button_font_fmily = JetBrainsMono NF
 
         # example buttons (R -> L)
         # droidbars-button = [0]isLeft(0/1), [1]color, [2]color2, [3]width, [4]height, [5]icon, [6]buttonType, [7]on-click     
-        droidbars-button = 0, rgba(fed9e6FF), rgba(ffafd2FF), 42, 16,‎    󰖭, normal, hyprctl dispatch killactive
-        droidbars-button = 0, rgba(fed9e6FF), rgba(ffafd2FF), 42, 16,‎   , normal, hyprctl dispatch fullscreen 1
-        droidbars-button = 1, rgba(fed9e6FF), rgba(ffafd2FF), 16, 16,‎󰐃, pin, hyprctl dispatch pin
-        droidbars-button = 1, rgba(fed9e6FF), rgba(ffafd2FF), 16, 16,󰗘, float, hyprctl dispatch togglefloating
+        droidbars-button = 0, rgba(ffdad5FF), rgba(ffb4a9FF), 42, 16,‎    󰖭, normal, hyprctl dispatch killactive
+        droidbars-button = 0, rgba(ffdad5FF), rgba(ffb4a9FF), 42, 16,‎   , normal, hyprctl dispatch fullscreen 1
+        droidbars-button = 1, rgba(ffdad5FF), rgba(ffb4a9FF), 16, 16,‎󰐃, pin, hyprctl dispatch pin
+        droidbars-button = 1, rgba(ffdad5FF), rgba(ffb4a9FF), 16, 16,󰗘, float, hyprctl dispatch togglefloating
     }
     hyprbars {
         # Honestly idk if it works like css, but well, why not
@@ -30,14 +30,14 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgb(130F10)
-        col.text = rgb(ebe0e2)
+        bar_color = rgb(130F0F)
+        col.text = rgb(ede0de)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(ebe0e2), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(ebe0e2), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(ebe0e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(ede0de), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(ede0de), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(ede0de), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
