--- a/.config/hypr/configs/window_rules.conf
+++ b/.config/hypr/configs/window_rules.conf
@@ -8,7 +8,8 @@ windowrule=float,pavucontrol
 windowrule=noblur,ffxiv*
 windowrule=noblur,gamescope
 windowrule=fullscreen,gamescope
-windowrule=workspace 6 silent,^(gamescope)$
+# windowrule=workspace 6 silent,^(gamescope)$
+windowrule = workspace 1 silent, ^(window)$
 
 windowrule = fullscreen, wlogout
 windowrule = float, title:wlogout
@@ -17,19 +18,11 @@ windowrule = fullscreen, title:wlogout
 windowrulev2=float,class:,title:^(Picture in picture)$
 windowrulev2=pin,class:,title:^(Picture in picture)$
 
-# #
-# windowrule=float, com-group_finity-mascot-Main
-# windowrule=noblur, com-group_finity-mascot-Main
-# windowrule=nofocus, com-group_finity-mascot-Main
-# windowrule=noshadow, com-group_finity-mascot-Main
-# windowrule=noborder, com-group_finity-mascot-Main
-# 
 windowrulev2=windowdance,class:^(REAPER)$,title:^(menu)$
 windowrulev2=forceinput,class:^(REAPER)$,title:^(menu)$
 
 windowrule = noblur,.*
 
-#windowrule = opacity 0.94 override 0.94 override, .*
 windowrule = float, ^(steam)$
 windowrule = float, ^(guifetch)$ # FlafyDev/guifetch
 windowrule = pin, ^(showmethekey-gtk)$
