--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -142,13 +142,13 @@ animations {
 misc {
     vfr = 1
     vrr = 1
-    focus_on_activate = true
+    focus_on_activate = false
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     #suppress_portal_warnings = true
     enable_swallow = true
     
-    disable_hyprland_logo = true
+    disable_hyprland_logo = false
     new_window_takes_over_fullscreen = 2
 }
 
